# RAG_OpenVINO

./: .env  .gitignore  app.py  main.py  pyproject.toml  requirements.txt
PocketFive/: PocketFive_Entity.mmd  PocketFive_Entity_Adaptive.mmd  PocketFive_Entity_Detail.mmd  PocketFive_Entity_Detail_Adaptive.mmd  PocketFive_Flow.mmd  PocketFive_Sequence.mmd
app/pdf/: embedding_manager.py
app/pdf/rag/: retrieval_chain_builder.py
src/app/: main.py
src/app/conversation/: __init__.py  manager.py  session_state.py
src/app/model/: __init__.py  factory.py  llama_manager.py  ov_manager.py
src/app/pdf/: loader.py  rag_chain_builder.backup  splitter.py  vectorstore_manager.py
src/app/pdf/rag/: budgeted_retriever.py  config.py  prompts.py  retrieval_chain_builder.py
src/app/ui/: chat_window.py  sidebar.py  style.css
src/rag_openvino_app/: app.py  main.py
src/rag_openvino_app/constants/: paths.py
src/rag_openvino_app/conversation/: manager.py  session_state.py
src/rag_openvino_app/model/: __init__.py  base.py  factory.py  llama_manager.py  ov_manager.py
src/rag_openvino_app/pdf/: __init__.py  embedding_manager.py  loader.py  splitter.py  vectorstore_manager.py
src/rag_openvino_app/rag/: chain_builder.py  compressor.py  config.py  ja_embedding.py  prompts.py  reranker.py  retriever.py
src/rag_openvino_app/ui/: __init__.py  chat_window.py  sidebar.py  uploader.py
src/rag_openvino_app/utils/: model_discovery.py  model_resolver.py
src/rag_openvino_app/utils/logger_utils/: __init__.py  logger_injector.py
